crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__let_mut_declaration.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: true
        uses_deprecated_var: false
        name:
          name: x
          span:
            start: 8
            end: 9
        type_ref: ~
        init:
          Literal:
            - Number: 42
            - start: 12
              end: 14
        span:
          start: 0
          end: 15
