crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__let_mut_declaration_with_type.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: true
        uses_deprecated_var: false
        name:
          name: x
          span:
            start: 8
            end: 9
        type_ref:
          Named:
            - number
            - start: 11
              end: 17
        init:
          Literal:
            - Number: 42
            - start: 20
              end: 22
        span:
          start: 0
          end: 23
