crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__logical_not.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: true
                - start: 1
                  end: 5
                  file: "<input>"
            span:
              start: 0
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
