crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__logical_or.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Or
            left:
              Literal:
                - Bool: true
                - start: 0
                  end: 4
                  file: "<input>"
            right:
              Literal:
                - Bool: false
                - start: 8
                  end: 13
                  file: "<input>"
            span:
              start: 0
              end: 13
              file: "<input>"
        span:
          start: 0
          end: 14
          file: "<input>"
