crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__method_with_multiple_args.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 201
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            member:
              name: method
              span:
                start: 4
                end: 10
                file: "<input>"
            args:
              - Identifier:
                  name: a
                  span:
                    start: 11
                    end: 12
                    file: "<input>"
              - Identifier:
                  name: b
                  span:
                    start: 14
                    end: 15
                    file: "<input>"
              - Identifier:
                  name: c
                  span:
                    start: 17
                    end: 18
                    file: "<input>"
            type_args: []
            span:
              start: 0
              end: 19
              file: "<input>"
        span:
          start: 0
          end: 20
          file: "<input>"
