crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__method_with_one_arg.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            member:
              name: method
              span:
                start: 4
                end: 10
                file: "<input>"
            args:
              - Identifier:
                  name: x
                  span:
                    start: 11
                    end: 12
                    file: "<input>"
            span:
              start: 0
              end: 13
              file: "<input>"
        span:
          start: 0
          end: 14
          file: "<input>"
