crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__negation.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Negate
            expr:
              Literal:
                - Number: 5
                - start: 1
                  end: 2
                  file: "<input>"
            span:
              start: 0
              end: 2
              file: "<input>"
        span:
          start: 0
          end: 3
          file: "<input>"
